--- a/style.css
+++ b/style.css
@@ -1,13 +1,73 @@
-#banner {
-  width: 100vw;
-  height: 100vh;
-  background-image: url('images/fleur-lg.jpg');
-  background-repeat: no-repeat;
-  /* background-attachment: fixed; */
-  background-size: 100% 100%;
-  /* border: 1px solid red; */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+
+body {
+  background-color: #44C4F4;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 h1 {
-  /* color: red; */
+  font-family: 'ModernBrush-Regular';
+  color: #9b248e;
+  font-size: 50px;
+  font-weight: bold;
+  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+  margin-bottom: 16px;
+}
+
+
+
+.banner {
+  color: white;
+  text-align: center;
+  height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0px 0px 5px rgba(100, 100, 100, 0.1);
+}
+
+#flower {
+  background-image: url('images/fleur.png');
+  background-size: cover !important;
+  background-position: center;
+  height: 500px;
+  width: 500px;
+  /* border: 1px solid red; */
+  margin-right: 75px;
+  z-index: 200;
+}
+
+.banner-content {
+  /* border: 1px solid green; */
+  padding-left: 85px;
+}
+
+/* .banner-content i {
+  padding-left: 75px;
+} */
+
+.banner-content a {
+  color: rgb(255, 255, 255);
+  font-family: Lato;
+  font-weight: 100;
+  font-size: 32px;
+}
+
+.banner-content a:hover {
+  font-family: Lato;
+  font-weight: 100;
+  color: rgb(255, 210, 0);
+}
+
+.banner p {
+  font-size: 25px;
+  font-weight: lighter;
+  color: rgb(255, 255, 255);
+  opacity: 0.95;
+  margin-bottom: 30px;
+  font-family: 'Lato';
 }
