--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body {
   background-color: #44C4F4;
   margin: 0;
+  font-family: 'Lato';
 }
 
 a {
@@ -10,14 +11,8 @@ a {
 }
 
 h1 {
-  font-family: 'ModernBrush-Regular';
-  color: #9b248e;
-  font-size: 50px;
-  font-weight: bold;
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
   margin-bottom: 16px;
 }
-
 
 
 .banner {
@@ -27,47 +22,36 @@ h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0px 0px 5px rgba(100, 100, 100, 0.1);
-}
-
-#flower {
-  background-image: url('images/fleur.png');
-  background-size: cover !important;
-  background-position: center;
-  height: 500px;
-  width: 500px;
-  /* border: 1px solid red; */
-  margin-right: 75px;
-  z-index: 200;
 }
 
 .banner-content {
-  /* border: 1px solid green; */
   padding-left: 85px;
 }
 
-/* .banner-content i {
-  padding-left: 75px;
-} */
-
 .banner-content a {
   color: rgb(255, 255, 255);
-  font-family: Lato;
   font-weight: 100;
-  font-size: 32px;
+  font-size: 40px;
 }
 
 .banner-content a:hover {
-  font-family: Lato;
-  font-weight: 100;
   color: rgb(255, 210, 0);
 }
 
 .banner p {
-  font-size: 25px;
-  font-weight: lighter;
+  font-size: 35px;
+  font-weight: 300;
   color: rgb(255, 255, 255);
   opacity: 0.95;
   margin-bottom: 30px;
-  font-family: 'Lato';
+}
+
+#flower {
+  background-image: url('images/fleurs.png');
+  background-size: cover !important;
+  background-position: center;
+  height: 800px;
+  width: 800px;
+  margin-right: 75px;
+  z-index: 200;
 }
