--- a/style.css
+++ b/style.css
@@ -16,12 +16,12 @@ h1 {
 
 
 .banner {
-  color: white;
   text-align: center;
   height: 100vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: transparent;
 }
 
 .banner-content {
@@ -47,11 +47,104 @@ h1 {
 }
 
 #flower {
-  background-image: url('images/fleurs.png');
+  /* background-image: url('images/fleurs.png');
   background-size: cover !important;
   background-position: center;
   height: 800px;
   width: 800px;
   margin-right: 75px;
-  z-index: 200;
+  z-index: 200; */
+}
+
+/* // ---- Banner Media Queries ---- */
+
+@media(max-width: 1200px) {
+  /* .banner {
+    min-height: 85vh;
+    img {
+      height: 320px;
+    }
+  } */
+  .banner {
+    color: red;
+    text-align: center;
+    height: 100vh;
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+    /* border: 100px solid green; */
+  }
+}
+
+@media(max-width: 991px) {
+  /* .banner {
+    align-items: flex-start;
+    text-align: center;
+    .row {
+      flex-flow: column-reverse;
+    }
+    h1 {
+      font-size: 2.5rem;
+      }
+    p {
+      font-size: 1.2rem;
+    }
+    img {
+      transform: rotate(0turn);
+      border: 6px solid white;
+      height: 300px;
+      width: 65%;
+      margin: 56px 0;
+    }
+  }
+  .home-page-edit {
+    font-size: 24px;
+    position: absolute;
+    top: 78px;
+    right: 166px;
+  } */
+}
+
+@media(max-width: 768px) {
+  /* .banner {
+    border-radius: 0px 0px 56px 0px;
+    min-height: 85vh;
+    img {
+      transform: rotate(0turn);
+      border: 6px solid white;
+      height: 284px;
+      width: 85%
+    }
+  } */
+}
+
+@media(max-width: 576px) {
+  .banner {
+    /* text-align: center; */
+    /* height: 100vh; */
+    /* display: flex; */
+    flex-direction: column;
+    /* justify-content: space-between; */
+    /* align-items: center; */
+    background-color: transparent;
+    /* padding: 24px; */
+  }
+
+  .banner-content {
+    height: 30vh;
+    width: 100%;
+    padding: 24px;
+    /* margin: 16px 0; */
+    z-index: 200;
+  }
+
+  #flower {
+    background-image: url('images/fleur-crop.png');
+    background-size: cover !important;
+    background-position: center;
+    height: 70vh;
+    width: 100%;
+    transform: rotate(90deg);
+    border: 1px solid green;
+  }
 }
